--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <button id="loadMore" class="btn">加载更多</button>
     </div>
 
-    <footer data-bg="img/0.jpg">
-      <div class="bg"></div>
+    <footer>
+      <!-- <div class="bg"></div> -->
       <div class="scrim"></div>
       <p>© 2025 Ballersword · 保留所有权利</p>
     </footer>
