--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="scrim"></div>
       <h1 class="reveal in-view">黑白影调</h1>
       <p class="reveal delay-1 in-view">我们无法判断一个瞬间的价值，直到它变成回忆</p>
+      <a href="all.html" class="reveal delay-2 in-view all-link">全部回忆 →</a>
     </header>
 
     <!-- 容器 -->
@@ -49,16 +50,16 @@
         </div>
       </section>
     </template>
-    
-<!-- 全屏查看（Lightbox） -->
-<div id="lightbox" class="lb" role="dialog" aria-modal="true" aria-hidden="true">
-  <div class="lb-backdrop" data-close="1"></div>
-  <figure class="lb-figure">
-    <img id="lb-img" alt="" />
-    <figcaption id="lb-caption"></figcaption>
-    <button class="lb-close" type="button" aria-label="关闭" data-close="1">×</button>
-  </figure>
-</div>
+
+    <!-- 全屏查看（Lightbox） -->
+    <div id="lightbox" class="lb" role="dialog" aria-modal="true" aria-hidden="true">
+      <div class="lb-backdrop" data-close="1"></div>
+      <figure class="lb-figure">
+        <img id="lb-img" alt="" />
+        <figcaption id="lb-caption"></figcaption>
+        <button class="lb-close" type="button" aria-label="关闭" data-close="1">×</button>
+      </figure>
+    </div>
     <script src="base/base.js"></script>
   </body>
 </html>
