--- a/all.html
+++ b/all.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>全部照片 · 黑白影调</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="img/0.jpg" crossorigin />
     <link rel="stylesheet" href="base/base.css" />
     <style>
