--- a/all.html
+++ b/all.html
@@ -120,7 +120,7 @@
       <div class="bg" style="background-image:url('img/0.jpg')"></div>
       <div class="scrim"></div>
       <h1>全部照片</h1>
-      <p>瀑布流一次性展示项目中的所有图片</p>
+      <p class="reveal delay-1 in-view">我们无法判断一个瞬间的价值，直到它变成回忆</p>
       <div class="top-links">
         <a href="./">← 返回首页</a>
       </div>
